--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
 
 
 :root{
-    --green: #28ae60;
+    --green: rgb(134, 186, 9);
     --black: #192a56;
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    
 }
 
 *{
@@ -20,6 +21,11 @@
     transition: all .2s linear;
  
 }
+
+ul{
+    list-style: none;
+}
+
 
 *::selection{
     background: var(--green);
@@ -40,19 +46,35 @@ section{
     padding: 2rem 9%;
 }
 
+.heading{
+    text-align: center;
+    color: var(--black);
+    text-transform: uppercase;
+    padding: 1rem;
+    font-size: 3.5rem;
+    padding-bottom: 2rem;
+}
+
+.heading span{
+    color: var(--green);
+    text-transform: uppercase;
+}
+
 .btn{
     display: inline-block;
     padding: .8rem 3rem;
-    border: .2rem solid var(--green);
+    background: #fff;
+    /* border: .2rem solid var(--green); */
     color: var(--green);
     cursor: pointer;
-    font-size: 1.7rem;
-    border-radius: .5rem;
+    font-size: 1.9rem;
+    border-radius: 5rem;
     position: relative;
     overflow: hidden;
     z-index: 0;
     margin-top: 1rem;
     font-weight: bolder;
+    text-transform: uppercase;
 }
 
 .btn::before{
@@ -113,11 +135,13 @@ header .social-call .social  a{
 header .nav{
     width: 100%;
     display: flex;
+    height: 10rem;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 7%;
     background: #fff;
     position: relative;
+    /* box-shadow: var(--box-shadow); */
   
 }
 
@@ -189,14 +213,16 @@ header .icons #menu-bars{
     min-height: 100vh;
     align-items: center;
     z-index: 1000;
-    /* background: ;
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/bg-yellow.jpg); */
+    background: url(../images/bg-yellow1.jpg);
     background-position: center;
-    background-size: cover; */
+    background-size: cover;
 }
 
 .banner .content{
     flex: 1 1 40rem;
-    
+    margin-top: -15rem;
+    padding-left: 2rem;
 }
 
 .banner .image{
@@ -212,20 +238,136 @@ header .icons #menu-bars{
 
 .banner .content h3{
     font-size: 5rem;
-    color: var(--black);
+    color: #eee;
+    /* text-shadow:5px 5px 5px rgba(0,0,0,.4); */
    
 }
 
 .banner .content h3 span{
     color: var(--green);
+    box-shadow: 0px 0px 0px #ffff;
+   
 }
 
 .banner .content p{
     font-size: 1.7rem;
-    color: #333;
+    color: #fff;
     padding: 1rem 0;
 }
 
+/* category css */
+.category{
+    display: flex;
+  
+    align-items: center;
+    justify-content: center;
+    /* z-index: 1000;
+    background: yellow; */
+    margin-bottom: -15rem;
+    
+}
+
+/* .category .slider{
+    display: flex;
+    width: 100%;
+
+    background-color: red;
+    padding: 3rem 5%;
+    transform: translateY(-50%);
+
+ position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center; 
+} */
+
+
+
+.category  .item .feature-box{
+    width: 100px;
+    height: 100px;
+    margin: 0px 20px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.category  .item .feature-box a img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.category  .item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    flex-direction: column;
+  
+}
+
+
+.category  .item span{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 5px;
+    color: #444444;
+}
+
+#autoWidth{
+    display: flex;
+    /* background-color: #fff; */
+    justify-content: center !important;
+    
+    /* padding: 2rem 5%; */
+    margin: 2.5rem auto 2rem auto;
+
+    
+}
+
+
+/* css banner_sale_container */
+.banner_sale_container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.banner_sale_container .banner_sale{
+    flex: 1 1 40rem;
+    height: 25rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.banner_sale_container .banner_sale img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.banner_sale_container .banner_sale .content{
+    position: absolute;
+    top: 50%; left: 4%;
+    transform: translateY(-50%);
+}
+
+.banner_sale_container .banner_sale .content p{
+    font-size: 2rem;
+    color: #333;
+}
+
+.banner_sale_container .banner_sale .content h3{
+    font-size: 3rem;
+    color: var(--black);
+}
+
+.banner_sale_container .banner_sale:hover img{
+    transform: scale(1.2) rotate(-5deg);
+}
 
 
 
@@ -318,6 +460,10 @@ header .icons #menu-bars{
         font-size: 2rem;
         background: #eee;
         border-left: .5rem solid var(--green);
+    }
+
+    .banner .content{
+        margin-top: 0;
     }
 }
 
