--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,557 @@ header .icons #menu-bars{
 }
 
 
+/* product section scc */
+.product_container .box_container{
+    /* display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center; */
 
+    display: grid;
+    grid-template-columns: 25rem 25rem 25rem 25rem;
+    grid-gap: 5rem 2rem;
+    justify-content: center;
+}
+
+.product_container .box_container .box{
+    /* flex: 1 1 25rem; */
+    text-align: center;
+    padding: 2rem;
+    /* border: .1rem solid rgba(0,0,0,.2); */
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);;
+    border-radius: .7rem;
+    max-width: 25rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.product_container .box_container .box  img{
+    height: 20rem;
+}
+
+.product_container .box_container .box .discount{
+    position: absolute;
+    top: 1rem; left: 1rem;
+    background: rgba(134, 186, 9,.1);
+    color: var(--black);
+    padding: .7rem 1rem;
+    font-size: 2rem;
+}
+
+.product_container .box_container .box .icons{
+    position: absolute;
+    top: .5rem; right: -6rem;
+}
+
+
+
+.product_container .box_container .box:hover .icons{
+    right: 1rem;
+   
+}
+
+.product_container .box_container .box:hover{
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 22%), 0 1px 2px rgb(0 0 0 / 40%);
+
+}
+
+.product_container .box_container .box .icons a{
+    display: block;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    color: var(--black);
+    background: rgba(231, 231, 231, 0.8);
+    border-radius: 50%;
+    margin-top: .7rem;
+}
+
+/* option 2 */
+.product_container .box_container .box .icons2{
+    position: absolute;
+    bottom: 35%;
+    left: -100%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 100%;
+    height: 8rem;
+    background: rgba(161, 156, 156, 0.5);
+}
+
+
+.product_container .box_container .box .icons2 a{
+    padding: 1.3rem;
+    background: var(--green);
+    margin-left: 1rem;
+    color: #fff;
+    font-size: 1.5rem
+}
+.product_container .box_container .box .icons2 a:hover{
+    background: #fff;
+    color: var(--green);
+}
+
+.product_container .box_container .box:hover .icons2{
+    left: 0;
+}
+
+
+.product_container .box_container .box .icons a:hover{
+    background: var(--green);
+    color: #fff;
+}
+
+.product_container .box_container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+}
+.product_container .box_container .box h3 a{
+    color: var(--black);
+    font-size: 2.5rem;
+}
+
+.product_container .box_container .box .stars i{
+    padding: 1rem .1rem;
+    font-size: 1.7rem;
+    color: gold;
+   
+}
+
+.product_container .box_container .box .price{
+    font-size: 2rem;
+    color: var(--green);
+    padding:.5rem 0;
+    text-transform: none;
+    font-weight: bolder;
+}
+
+.product_container .box_container .box .price span{
+    font-size: 1.5rem;
+    color: #999;
+    text-decoration: line-through;
+    text-transform: none;
+}
+
+
+/* deal section */
+.deal{
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url(../images/bg-deal.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* align-items: center; */
+    margin-top: 4rem;
+    
+}
+
+.deal .content{
+    max-width: 50rem;
+    margin-top: -3rem;
+    margin-bottom: 10rem;
+    
+}
+
+.deal .content .title{
+    font-size: 5rem;
+    color: #fff;
+    font-weight: bolder;
+}
+
+.deal .content p{
+    font-size: 1.7rem;
+    padding: 1rem 0;
+    color: #eee;
+}
+
+.deal .content .count-down{
+    display: flex;
+    gap: 1rem;
+    padding: .5rem 0;
+}
+
+.deal .content .count-down .box{
+    width: 9rem;
+    text-align: center;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.3);
+    border: .1rem solid rgba(0,0,0,.3)
+}
+
+.deal .content .count-down .box h3{
+    color: var(--black);
+    background: #fff;
+    height: 7rem;
+    line-height: 7rem;
+    width: 100%;
+    font-size: 5rem;
+}
+
+.deal .content .count-down .box span{
+    display: inline-block;
+    background: var(--black);
+    color: #fff;
+    width: 100%;
+    padding: .5rem;
+    font-size: 2rem;
+}
+
+/* product-deal css */
+.deal_product {
+   /* position: absolute; width: 100%; left: 0; top:-250% ; */
+   transform: translateY(-40%);
+    margin-bottom: -10rem;
+}
+
+.deal_product .box{
+    background: #fff;
+}
+
+
+/* review section css */
+
+.review .review-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+}
+
+.review .review-box .box{
+    flex: 1 1 30rem;
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgba(0,0,0,.1);
+    border-radius: .5rem;
+    position: relative;
+}
+
+.review .review-box .box .fa-quote-right{
+    position: absolute;
+    top: 2rem; right: 2rem;
+    font-size: 6rem;
+    color: #ccc;
+}
+
+.review .review-box .box .user{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    padding-bottom: 1.5rem;
+}
+
+.review .review-box .box .user img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.review .review-box .box h3{
+    color: var(--black);
+    font-size: 2rem;
+    padding-bottom: .5rem;
+}
+
+.review .review-box .box .user i{
+    font-size: 1.3rem;
+    color: var(--green);
+}
+
+.review .review-box .box p{
+    font-size: 1.5rem;
+    list-style: 1.8;
+    color: #666;
+}
+
+
+
+
+
+/* footer css starts */
+
+.footer{
+    box-shadow: var(--box-shadow);
+}
+
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
+}
+
+.footer .box-container .box h3{
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: var(--black);
+}
+.footer .box-container .box a{
+    display: block;
+    padding:.5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+
+.footer .box-container .box a:hover{
+    text-decoration: underline;
+    color:var(--green);
+}
+
+.footer .credit{
+    text-align: center;
+    border-top: .1rem solid rgba(0,0,0,.1);
+    font-size: 2rem;
+    color: var(--black);
+    padding: .5rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.footer .credit span{
+    color: var(--green);
+
+}
+
+/* footer css ends */
+
+
+
+
+/* ************** Product Page style ******************** */
+
+.products{
+    display: flex;
+    gap: 3rem;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+}
+
+.products .siderbar-container{
+    flex: 1 1 20rem;
+  
+}
+
+.products .siderbar-container .box{
+   border: .1rem solid rgba(0,0,0,.1);
+   border-radius: .5rem;
+   background: #f1f6f7;
+   margin-bottom: 2rem;
+  
+}
+
+.products .siderbar-container .box h1{
+    display: inline-block;
+    width: 100%;
+    background: var(--green);
+    padding: 1rem 1rem;
+    font-size: 2rem;
+    color: #fff;
+    font-weight: bolder;    
+}
+
+.products .siderbar-container .box .categories .item{
+    padding: 1rem 1rem;
+    transition: none;
+    font-size: 1.8rem;
+    line-height: 2rem;
+    
+}
+.products .siderbar-container .box .categories .item input[type=radio]{
+    width: 1.5rem;
+    height: 1.5rem;
+    line-height: 2rem;cursor: pointer;
+}
+.products .siderbar-container .box .categories .item:hover{
+    color: #eee;
+    background: var(--green);
+  
+}
+.products .siderbar-container .box .categories .item label{
+    width:80%;
+    height: 100%;
+    display: inline-block;cursor: pointer;
+}
+
+
+
+
+.products .product-container{
+    flex: 1 1 80rem;
+    min-height: 20rem;
+    text-align: center;
+}
+
+
+.products .product-container .sort{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #f1f6f7;
+    padding: 1rem 1.5rem;
+}
+
+.products .product-container .sort select{
+    background: white;
+    padding: 1rem;
+    width: 20rem;
+}
+
+.products .product-container .sort option{
+    width: 100px;
+}
+.products .product-container .sort select:first-child{
+    margin-right: 1.2rem;
+}
+
+.search-box{
+    position: relative;
+    padding: 1rem 1.5rem;
+}
+
+.search-box input{
+    padding: 1rem 1rem 1rem 1rem;
+    font-size: 1.4rem;
+}
+
+.search-box i{
+    font-size: 1.7rem;
+    position: absolute;
+    right: 20px;
+    transform: translateY(60%);
+}
+
+.products .product-container .product-box{
+    display: grid;
+    grid-template-columns: 20rem 20rem 20rem 20rem;
+    grid-gap: 5rem 2rem;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.products .product-container .product-box .box{
+    /* flex: 1 1 25rem; */
+    text-align: center;
+    padding: 2rem;
+    /* border: .1rem solid rgba(0,0,0,.2); */
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);;
+    border-radius: .7rem;
+    max-width: 25rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.products .product-container .product-box .box  img{
+    height: 15rem;
+}
+
+.products .product-container .product-box .box .discount{
+    position: absolute;
+    top: 1rem; left: 1rem;
+    background: rgba(134, 186, 9,.1);
+    color: var(--black);
+    padding: .7rem 1rem;
+    font-size: 1.5rem;
+}  
+
+.products .product-container .product-box .box .icons{
+    position: absolute;
+    top: .5rem; right: -6rem;
+}
+
+.products .product-container .product-box .box:hover .icons{
+    right: 1rem;
+} 
+
+.products .product-container .product-box .box:hover{
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 22%), 0 1px 2px rgb(0 0 0 / 40%);
+
+}
+
+
+.products .product-container .product-box .box .icons a{
+    display: block;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    color: var(--black);
+    background: rgba(231, 231, 231, 0.8);
+    border-radius: 50%;
+    margin-top: .7rem;
+}
+
+/* option 2 */
+.products .product-container .product-box .box .icons2{
+    position: absolute;
+    bottom: 35%;
+    left: -100%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 100%;
+    height: 8rem;
+    background: rgba(161, 156, 156, 0.5);
+}
+
+
+.products .product-container .product-box .box .icons2 a{
+    padding: 1.3rem;
+    background: var(--green);
+    margin-left: 1rem;
+    color: #fff;
+    font-size: 1.5rem
+}
+.products .product-container .product-box .box .icons2 a:hover{
+    background: #fff;
+    color: var(--green);
+}
+
+.products .product-container .product-box .box:hover .icons2{
+    left: 0;
+}
+
+
+.products .product-container .product-box .box .icons a:hover{
+    background: var(--green);
+    color: #fff;
+}
+
+.products .product-container .product-box .box h3{
+    color: var(--black);
+    font-size: 2rem;
+}
+.products .product-container .product-box .box h3 a{
+    color: var(--black);
+    font-size: 2rem;
+}
+
+.products .product-container .product-box .box .stars i{
+    padding: 1rem .1rem;
+    font-size: 1.2rem;
+    color: gold;
+   
+}
+
+.products .product-container .product-box .box .price{
+    font-size: 1.5rem;
+    color: var(--green);
+    padding:.5rem 0;
+    text-transform: none;
+    font-weight: bolder;
+}
+
+.products .product-container .product-box .box .price span{
+    font-size: 1.4rem;
+    color: #999;
+    text-decoration: line-through;
+    text-transform: none;
+}
 
 
 
