--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+ */
+/* Font Roboto */
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 :root{
-    --green: rgb(134, 186, 9);
+    --main: rgb(134, 186, 9);
+    /* --main: #28a745; */
     --black: #192a56;
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     
 }
 
+body a:hover{
+    text-decoration: none;
+}
+
 *{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -26,9 +34,29 @@ ul{
     list-style: none;
 }
 
+body a{
+    text-decoration: none;
+  
+}
+
+body .form-control{
+    outline: red;
+    border: none;
+}
+
+input:focus{
+     outline: none;
+  
+    /* border:0px solid #ccc !important; */
+}
+
+body a:hover{
+    color: var(--main);
+}
+
 
 *::selection{
-    background: var(--green);
+    background: var(--main);
     color: #fff;
 }
 
@@ -37,7 +65,7 @@ html{
     overflow-x: hidden;
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
-    min-height: 200rem;
+    font-weight: 900;
     
 }
 
@@ -53,19 +81,40 @@ section{
     padding: 1rem;
     font-size: 3.5rem;
     padding-bottom: 2rem;
+    font-weight: 700;
+}
+
+.titlePage{
+    background: url(../images/home-bg.jpg);
+    min-height: 20rem;
+    background-position: center;
+    background-size: cover;
+    text-align: center;padding-top: 5rem;   
+}
+
+.titlePage h1{
+    font-size: 5rem;
+    color: var(--main);
+    font-weight: 900;
+}
+
+.titlePage a,
+.titlePage .link{
+    color: #666;
+    font-size: 2rem;
 }
 
 .heading span{
-    color: var(--green);
+    color: var(--main);
     text-transform: uppercase;
 }
 
-.btn{
+body .btn{
     display: inline-block;
     padding: .8rem 3rem;
     background: #fff;
-    /* border: .2rem solid var(--green); */
-    color: var(--green);
+    border: .2rem solid var(--main);
+    color: var(--main);
     cursor: pointer;
     font-size: 1.9rem;
     border-radius: 5rem;
@@ -75,26 +124,27 @@ section{
     margin-top: 1rem;
     font-weight: bolder;
     text-transform: uppercase;
+    /* border: .1rem solid var(-green); */
 }
 
-.btn::before{
+body .btn::before{
     content: '';
     position: absolute;
     top:0; right: 0;
     width: 0%;
     height: 100%;
-    background: var(--green);
+    background: var(--main);
     transition: .3s linear;
     z-index: -1;
 }
 
-.btn:hover::before{
+body .btn:hover::before{
     width: 100%;
     left: 0;
    
 }
 
-.btn:hover{
+body .btn:hover{
     color: #fff;
 }
 
@@ -163,20 +213,20 @@ header .logo{
 }
 
 header .logo i{
-    color: var(--green);
+    color: var(--main);
 }
 
 header .navbar a{
     font-size: 1.7rem;
     border-radius: .5rem;
     padding: .5rem 1.5rem;
-    color: var(--light-color);
+    color: var(--black);
 }
 
 header .navbar .active,
 header .navbar a:hover{
     color: #fff;
-    background: var(--green);
+    background: var(--main);
 }
 
 header .icons i,
@@ -196,7 +246,7 @@ header .icons a{
 header .icons i:hover,
 header .icons a:hover{
     color: #fff;
-    background: var(--green);
+    background: var(--main);
     transform: rotate(360deg);
 }
 
@@ -238,13 +288,22 @@ header .icons #menu-bars{
 
 .banner .content h3{
     font-size: 5rem;
-    color: #eee;
-    /* text-shadow:5px 5px 5px rgba(0,0,0,.4); */
+   /*   color: #eee;
+   text-shadow:5px 5px 5px rgba(0,0,0,.4); */
+    /* text-shadow: 2px 6px 8px #292929;
+    font-weight: 400; */
+
+    color: #fff;
+    text-shadow: 1px 6px 8px #292929;
+    line-height: 1.4;
+    margin: 0 0 15px;
+    /* white-space: nowrap; */
+    font-weight: 700;
    
 }
 
 .banner .content h3 span{
-    color: var(--green);
+    color: var(--main);
     box-shadow: 0px 0px 0px #ffff;
    
 }
@@ -453,14 +512,14 @@ header .icons #menu-bars{
 
 .product_container .box_container .box .icons2 a{
     padding: 1.3rem;
-    background: var(--green);
+    background: var(--main);
     margin-left: 1rem;
     color: #fff;
     font-size: 1.5rem
 }
 .product_container .box_container .box .icons2 a:hover{
     background: #fff;
-    color: var(--green);
+    color: var(--main);
 }
 
 .product_container .box_container .box:hover .icons2{
@@ -469,17 +528,19 @@ header .icons #menu-bars{
 
 
 .product_container .box_container .box .icons a:hover{
-    background: var(--green);
+    background: var(--main);
     color: #fff;
 }
 
-.product_container .box_container .box h3{
-    color: var(--black);
-    font-size: 2.5rem;
-}
+
 .product_container .box_container .box h3 a{
     color: var(--black);
-    font-size: 2.5rem;
+    font-size: 2.2rem;
+    font-weight: bolder;
+}
+.product_container .box_container .box h3 a:hover{
+    color: var(--main);
+  
 }
 
 .product_container .box_container .box .stars i{
@@ -491,7 +552,7 @@ header .icons #menu-bars{
 
 .product_container .box_container .box .price{
     font-size: 2rem;
-    color: var(--green);
+    color: var(--main);
     padding:.5rem 0;
     text-transform: none;
     font-weight: bolder;
@@ -629,7 +690,7 @@ header .icons #menu-bars{
 
 .review .review-box .box .user i{
     font-size: 1.3rem;
-    color: var(--green);
+    color: var(--main);
 }
 
 .review .review-box .box p{
@@ -645,7 +706,8 @@ header .icons #menu-bars{
 /* footer css starts */
 
 .footer{
-    box-shadow: var(--box-shadow);
+ 
+    border-top: .4rem solid #ececec;
 }
 
 .footer .box-container{
@@ -668,7 +730,7 @@ header .icons #menu-bars{
 
 .footer .box-container .box a:hover{
     text-decoration: underline;
-    color:var(--green);
+    color:var(--main);
 }
 
 .footer .credit{
@@ -682,7 +744,7 @@ header .icons #menu-bars{
 }
 
 .footer .credit span{
-    color: var(--green);
+    color: var(--main);
 
 }
 
@@ -717,7 +779,7 @@ header .icons #menu-bars{
 .products .siderbar-container .box h1{
     display: inline-block;
     width: 100%;
-    background: var(--green);
+    background: var(--main);
     padding: 1rem 1rem;
     font-size: 2rem;
     color: #fff;
@@ -738,13 +800,15 @@ header .icons #menu-bars{
 }
 .products .siderbar-container .box .categories .item:hover{
     color: #eee;
-    background: var(--green);
+    background: var(--main);
   
 }
 .products .siderbar-container .box .categories .item label{
     width:80%;
     height: 100%;
     display: inline-block;cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 
@@ -769,6 +833,7 @@ header .icons #menu-bars{
     background: white;
     padding: 1rem;
     width: 20rem;
+    font-size: 1.5rem;
 }
 
 .products .product-container .sort option{
@@ -871,14 +936,14 @@ header .icons #menu-bars{
 
 .products .product-container .product-box .box .icons2 a{
     padding: 1.3rem;
-    background: var(--green);
+    background: var(--main);
     margin-left: 1rem;
     color: #fff;
     font-size: 1.5rem
 }
 .products .product-container .product-box .box .icons2 a:hover{
     background: #fff;
-    color: var(--green);
+    color: var(--main);
 }
 
 .products .product-container .product-box .box:hover .icons2{
@@ -887,7 +952,7 @@ header .icons #menu-bars{
 
 
 .products .product-container .product-box .box .icons a:hover{
-    background: var(--green);
+    background: var(--main);
     color: #fff;
 }
 
@@ -909,7 +974,7 @@ header .icons #menu-bars{
 
 .products .product-container .product-box .box .price{
     font-size: 1.5rem;
-    color: var(--green);
+    color: var(--main);
     padding:.5rem 0;
     text-transform: none;
     font-weight: bolder;
@@ -922,6 +987,498 @@ header .icons #menu-bars{
     text-transform: none;
 }
 
+
+/* ***************** Detail Page CSS ********************* */
+.heading-details{
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 1.7rem;  
+    text-transform: uppercase; 
+    display: inline-block;
+    background: var(--black);
+    padding: 1rem 3.5rem;
+    margin-top: 10rem;
+}
+
+/* .heading-details span{
+    font-size: 2.5rem;
+    background: var(--main);
+    color: #fff;
+    padding: .5rem;
+    border-radius: .5rem;
+} */
+
+.detail-container{
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    
+}
+
+
+.detail-container .box{
+    flex: 1 1 40rem;
+    
+  
+}
+
+.detail-container .box:first-child{
+    text-align: center;
+    
+  
+}
+
+.detail-container .box img{
+    /* width: 80%; */
+    max-height: 40rem;
+    
+}
+
+
+
+.detail-container .box p{
+    font-size: 1.5rem;
+    color: #666;
+    line-height: 1.7;
+    text-transform: none;
+}
+
+.detail-container .box h1{
+    font-size: 3.2rem;
+    color: var(--black);
+
+}
+
+.detail-container .box .price{
+    font-size: 2.8rem;
+    color: var(--main);
+    text-transform: none;
+    padding-top: 0;
+    font-weight: bolder;
+    margin-top: 0;
+}
+
+.detail-container .box .price span{
+    font-size: 2.1rem;
+    color: rgb(141, 140, 140);
+    text-transform: none;
+    text-decoration: line-through;
+}
+
+
+.detail-container .box .info h5{ 
+    font-size: 1.5rem;
+    color: #666;
+    text-transform: none;
+    line-height: 2;
+}
+
+.detail-container .box .info span{ 
+    font-size: 1.5rem;
+    color: #888;
+    text-transform: none;
+    line-height: 2;
+}
+
+
+.detail-container .box .quantity{
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.detail-container .box input{ 
+    /* padding: 1.5rem .5rem; */
+    width: 5rem;
+    height: 4rem;
+    border: .1rem solid var(--main);
+    font-size: 2rem;
+    text-align: center;
+    margin-right: 1rem;
+}
+.detail-container .box a{
+    border: .1rem solid var(--main);
+    margin-top: 0;
+    text-transform: none;
+}
+
+.detail-container .box h3{
+    padding-top: 1rem;
+    font-size: 2.5rem;
+    color: var(--black);
+    margin-top: 1.5rem;
+}
+
+
+/* .detail-container .box {
+    padding-top:1rem;
+    font-size: 2.5rem;
+    color: var(--main);
+} */
+
+.produdtx{
+    margin-top: 20rem;
+    background-color: red;
+}
+
+
+/* ********************** Cart Page Css *****************************/
+.cart-container{
+    max-width: 1080px;
+    margin:auto;
+    padding-left:25px;
+    padding-right: 25px;
+   
+}
+
+
+
+
+.cart-container table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.cart-container table tr{
+    /* border-bottom: .1rem solid rgb(204, 204, 204); */
+}
+
+
+.cart-container table .cart-info{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+
+.cart-container table .cart-info p{
+    display: block;
+    margin: 0;
+    font-weight: 500;
+    font-size: 1.7rem;
+    text-transform: none;
+    
+}
+
+.cart-container table tr td span{
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-left: 1rem;
+    color:var(--black);
+}
+
+.cart-container table th,
+.total-price th{
+    text-align: left;
+    padding: 0.5rem .5rem;
+    color: var(--black);
+    font-size: 2rem;
+    /* background: var(--main); */
+    font-weight: bolder;
+    border-bottom: .5rem solid #ececec;
+}
+
+/* .cart-container .table td, */
+.total-price td{
+    padding: 2rem 1rem;  
+   
+}
+
+.cart-container table td input{
+    width: 5.2rem;
+    height: 4rem;
+    padding: .5rem;
+    font-size: 1.5rem;
+    border: .1rem solid #666;
+    margin-left: 2rem;
+}
+
+.cart-container .cart-info a{
+    color: #FF2300;
+    font-size: 1.4rem;
+}
+.cart-container .cart-info small{
+    /* color: var(--main); */
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-transform: none;   
+     color: #333;
+}
+
+.cart-container table img{
+    /* width: 7rem; */
+    width: 8rem;
+    height: auto;
+    margin-right: 2rem;
+}
+
+.total-price {
+	display: flex;
+	justify-content: space-between;
+}
+
+.total-price .voucher{
+    margin-top: 3rem;
+}
+
+
+.total-price .voucher h3{
+    font-size: 2.3rem;
+    color: var(--black);
+    font-weight:600;
+}
+
+.total-price .voucher input{
+    padding: .7rem .5rem;
+    font-size: 1.7rem;
+    border: .1rem solid #ececec;
+    color: gray;
+    text-transform: none;
+}
+
+.total-price .voucher h3{
+    font-size: 2.3rem;  
+    color: var(--black);
+    font-weight:600;
+}
+
+.total-price .voucher a{
+    border-radius: none;
+    font-size: 1rem;
+    background-color: gray;
+    padding: .7rem 1rem;
+    margin-left: 1rem;
+    font-size: 1.7rem;
+    color: #fff;
+}
+
+.total-price table {
+	border-top: .5rem solid #ececec;
+	width: 100%;
+	max-width: 400px;
+}
+
+.cart-container table th:last-child,
+.cart-container table td:last-child,
+.total-price td:last-child{
+    text-align: right;
+    text-transform: none;
+}
+
+.cart-container table td:last-child{
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--main);
+}
+
+.total-price td{
+    font-size: 1.8rem;
+    color: var(--black);
+    font-weight: 600;
+}
+
+.total-price .total{
+    font-weight: 900;
+    
+}
+
+ body .total-price table tr td .btn{
+    /* color: var(--main); */
+    width: 100%;
+}
+
+
+/* ************************ Account Page CSS ************************ */
+.account-container{
+    display: flex;
+    gap: 2.5rem;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10rem;
+}
+
+.account-container .box{
+    flex: 1 1 30rem;
+    text-align: center;
+    padding: 3rem 0;
+    min-height: 10rem;
+    border: .3rem solid var(--black);
+    color: var(--black);
+}
+
+.account-container .box:hover{
+    transform: translateY(-1rem);
+    border: .3rem solid var(--main);
+    color: var(--main);
+}
+
+.account-container .box i{
+    font-size: 2rem;
+    padding: 3rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: 50%;
+    transition: transform 1s ease;
+}
+
+
+.account-container .box:hover i{
+    background: var(--main);
+    transform: rotate(360deg);
+}
+
+.account-container .box h1{
+    font-size: 2rem;
+    line-height: 2;
+}
+
+.account-container .box span{
+    color: var(--light-color);
+    font-size: 1.5rem;
+    text-transform: none;
+}
+
+/* ********************** Address Page CSS *********************** */
+
+._address .alert{
+    width: 50%;
+    margin: auto;
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.box-address{
+    margin-bottom: 3rem;
+   
+}
+
+.box-address:first-child .card{
+    background-color: rgb(255, 187, 0);
+    
+}
+
+.box-address .card-header{
+    font-size: 2rem;
+    display: flex;
+    justify-content: space-between;
+    color: var(--black);
+    padding: 1rem .5rem;
+  
+}
+
+.box-address .card-header h3{
+    font-size: 2.2rem;
+}
+
+.box-address a{
+    color: var(--black);
+}
+
+.box-address .card-body h4{
+    font-size: 2rem;
+    color: #333;
+    line-height: 2;
+    text-transform: none;
+}
+
+.box-address .card-body{
+    padding-bottom: 3rem;
+    min-height: 15rem;
+}
+
+.box-address .card-body p{
+    font-size: 1.5rem;
+    color: grey;
+    padding-bottom: 2rem;
+    text-transform: none;
+}
+
+.box-address .card-body a{
+    background-color: var(--main);
+    color: #fff;
+    padding: 1rem 1.5rem;
+    font-size: 1.8rem;
+    
+}
+
+/* *************** Checkout Page CSS ********************* */
+.bill .box-info{
+    padding: 1rem 3rem;
+}
+
+.box-info label{
+    font-size: 1.5rem;
+    padding-top: 1rem ;
+    font-weight: 500;
+}
+
+.bill .box-info small{
+    font-size: 1.5rem;
+    color: red;
+    padding-top: 1rem;
+}
+
+.box-info input,
+.box-info textarea{
+    padding: .8rem 1rem;
+    font-size: 1.5rem;
+    outline: none;
+    border: .1rem solid #ccc;
+}
+
+.box-info input:focus{
+    outline: none;
+    box-shadow:none !important;
+    border:.1rem solid #ccc !important;
+}
+
+.bill .box-bill{
+    border: .2rem solid var(--main);
+   padding: 1rem 2rem;
+}
+
+
+.box-info h3,
+.box-bill h3{
+   font-size: 2rem;
+   font-weight: 600;
+   padding: 1rem 0;
+   border-bottom: .4rem solid #ececec;
+}
+.box-bill table{
+    width: 100%;
+    border-bottom: .5rem solid #ececec;
+}
+
+.box-bill table th:last-child,
+.box-bill table td:last-child{
+    text-align: right;
+}
+
+.box-bill table th,
+.box-bill table td{
+    font-size: 1.5rem;
+    padding: .5rem 0;
+}
+
+.box-bill .checkout-payment{
+    margin-top: 2rem;
+    padding: 1rem;
+}
+
+.box-bill .checkout-payment label{
+    font-size: 1.5rem;
+}
+
+.box-bill .checkout-payment input{
+    padding: .7rem;
+}
+
+.box-bill .checkout-payment .note{
+    font-size: 1.5rem;
+    padding: 1rem 0;
+    color: #444;
+}
 
 
 
@@ -1005,11 +1562,12 @@ header .icons #menu-bars{
 
     header .navbar a{
         display: block;
+        width: 100%;
         padding: 1.5rem;
         margin: 1rem;
         font-size: 2rem;
         background: #eee;
-        border-left: .5rem solid var(--green);
+        border-left: .5rem solid var(--main);
     }
 
     .banner .content{
@@ -1025,4 +1583,4 @@ header .icons #menu-bars{
     }
 
 
-}
+} 
