--- a/css/style.css
+++ b/css/style.css
@@ -899,7 +899,23 @@ header .icons #menu-bars{
 
 /* footer css ends */
 
+#scroll-top{
+    position: fixed;
+    top: -120%;
+    right: 2rem;
+    padding: .5rem 1rem;
+    font-size: 4rem;
+    background: var(--main);
+    color: #fff;
+    border-radius: .5rem;
+    transition: 1s linear;
+    z-index: 1000;
+}
 
+#scroll-top.active{
+    top: calc(100% - 12rem);
+
+}
 
 
 /* ************** Product Page style ******************** */
@@ -2150,3 +2166,202 @@ body ._login {
 
 
 } 
+
+
+
+.review .slide{
+    padding:2rem;
+    box-shadow:var(--box-shadow);
+    border:.1rem solid rgba(0,0,0,.2);
+    border-radius: .5rem;
+    position: relative;    
+}
+
+.review .slide .fa-quote-right{
+    position: absolute;
+    top:2rem; right:2rem;
+    font-size: 6rem;
+    color:#ccc;
+}
+
+.review .slide .user{
+    display: flex;
+    gap:1.5rem;
+    align-items: center;
+    padding-bottom: 1.5rem;
+}
+
+.review .slide .user img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.review .slide .user h3{
+    color:var(--black);
+    font-size: 2rem;
+    padding-bottom: .5rem;
+}
+
+.review .slide .user i{
+    font-size: 1.3rem;
+    color:var(--green);
+}
+
+.review .slide p{
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color:var(--light-color);
+}
+
+/* ._product_container .deal_product .swiper-wrapper{
+    display: flex;
+   
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    
+} */
+
+
+._product_container .box_container{
+    /* display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center; */
+
+    /* display: grid;
+    grid-template-columns: 25rem 25rem 25rem 25rem;
+    grid-gap: 5rem 2rem;
+    justify-content: center; */
+}
+
+._product_container .box_container .box{
+    /* flex: 1 1 25rem; */
+    width: 50px;
+    text-align: center;
+    padding: 2rem;
+    /* border: .1rem solid rgba(0,0,0,.2); */
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);;
+    border-radius: .7rem;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+._product_container .box_container .box  img{
+    height: 20rem;
+    object-fit: cover;
+}
+
+._product_container .box_container .box .discount{
+    position: absolute;
+    top: 1rem; left: 1rem;
+    background: rgba(134, 186, 9,.1);
+    color: var(--black);
+    padding: .7rem 1rem;
+    font-size: 2rem;
+}
+
+._product_container .box_container .box .icons{
+    position: absolute;
+    top: .5rem; right: -6rem;
+}
+
+
+
+._product_container .box_container .box:hover .icons{
+    right: 1rem;
+   
+}
+
+._product_container .box_container .box:hover{
+    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 22%), 0 1px 2px rgb(0 0 0 / 40%);
+
+}
+
+._product_container .box_container .box .icons a{
+    display: block;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    color: var(--black);
+    background: rgba(231, 231, 231, 0.8);
+    border-radius: 50%;
+    margin-top: .7rem;
+}
+
+/* option 2 */
+._product_container .box_container .box .icons2{
+    position: absolute;
+    bottom: 35%;
+    left: -100%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 100%;
+    height: 8rem;
+    background: rgba(161, 156, 156, 0.5);
+}
+
+
+._product_container .box_container .box .icons2 a{
+    padding: 1.3rem;
+    background: var(--main);
+    margin-left: 1rem;
+    color: #fff;
+    font-size: 1.5rem
+}
+._product_container .box_container .box .icons2 a:hover{
+    background: #fff;
+    color: var(--main);
+}
+
+._product_container .box_container .box:hover .icons2{
+    left: 0;
+}
+
+
+._product_container .box_container .box .icons a:hover{
+    background: var(--main);
+    color: #fff;
+}
+
+
+._product_container .box_container .box h3 a{
+    color: var(--black);
+    font-size: 2.2rem;
+    font-weight: bolder;
+}
+._product_container .box_container .box h3 a:hover{
+    color: var(--main);
+  
+}
+
+._product_container .box_container .box .stars i{
+    padding: 1rem .1rem;
+    font-size: 1.7rem;
+    color: gold;
+   
+}
+
+._product_container .box_container .box .price{
+    font-size: 2rem;
+    color: var(--main);
+    padding:.5rem 0;
+    text-transform: none;
+    font-weight: bolder;
+}
+
+._product_container .box_container .box .price span{
+    font-size: 1.5rem;
+    color: #999;
+    text-decoration: line-through;
+    text-transform: none;
+}
