--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 :root{
     /* --main: rgb(134, 186, 9); */
     --main: #28a745;
-    /* --black: #192a56; */
-    --black: #3f3e3e;
+    --black: #192a56;
+    /* --black: #3f3e3e; */
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     --danger:  #F32013;
@@ -47,9 +47,41 @@ body a{
   
 }
 
+
+
 body .form-control{
     outline: red;
     border: none;
+}
+
+/* .titlePage-cart{
+    background-color: #ececec;
+} */
+
+.box-text{
+    text-align: center;
+    font-size: 2.7rem;
+    text-transform: uppercase;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 2rem 1rem;
+   max-height: 10rem;
+}
+
+
+.box-text a{
+    font-weight: 410;
+    text-transform: uppercase;
+    
+}
+body .titlePage-cart .box-text a:hover{
+    color: var(--main);
+    
+}
+.box-text span{
+    padding: 0 1rem;
+    color: #ececec;
 }
 
 input:focus{
@@ -1034,6 +1066,18 @@ header .icons>._username{
     font-weight: bolder;    
 }
 
+.products .siderbar-container .box .categories a{
+    display: block;
+    width: 100%;
+   
+    font-size: 1.6rem;
+    padding: 1rem 1rem;
+}
+.products .siderbar-container .box .categories a:hover{
+    background-color: var(--main);
+    color:#ffffff;
+}
+
 .products .siderbar-container .box .categories .item{
     padding: 1rem 1rem;
     transition: none;
@@ -1120,6 +1164,7 @@ body ._order .sort{
     margin-top: 2rem;
 }
 
+
 .products .product-container .product-box .box{
     /* flex: 1 1 25rem; */
     text-align: center;
@@ -1132,9 +1177,19 @@ body ._order .sort{
     position: relative;
 }
 
+
+
 .products .product-container .product-box .box  img{
-    height: 15rem;
+    max-height: 15rem;
+    object-fit: cover;
+    margin: auto;
+    transition: transform 1s ease;
 }
+
+.products .product-container .product-box .box:hover img{
+    transform: scale(.8);
+}
+
 
 .products .product-container .product-box .box .discount{
     position: absolute;
@@ -1148,6 +1203,7 @@ body ._order .sort{
 .products .product-container .product-box .box .icons{
     position: absolute;
     top: .5rem; right: -6rem;
+    z-index: 1000;
 }
 
 .products .product-container .product-box .box:hover .icons{
@@ -1155,7 +1211,7 @@ body ._order .sort{
 } 
 
 .products .product-container .product-box .box:hover{
-    box-shadow: 0 1px 3px -2px rgb(0 0 0 / 22%), 0 1px 2px rgb(0 0 0 / 40%);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 
 }
 
@@ -1380,7 +1436,7 @@ body table{
     border-collapse: collapse;
 } */
 .cart-container{
-    margin-top: 5rem;
+    margin-top: 0rem;
 }
 
 body .cart-container table {
@@ -1646,6 +1702,7 @@ table ._amount{
 }
 
 /* *************** Checkout Page CSS ********************* */
+
 .bill .box-info{
     padding: 1rem 3rem;
 }
@@ -1653,7 +1710,9 @@ table ._amount{
 .box-info label{
     font-size: 1.5rem;
     padding-top: 1rem ;
-    font-weight: 500;
+    font-weight: 400    ;
+    padding-bottom: .5rem;
+    color: #333;
 }
 
 .bill .box-info small{
@@ -1677,7 +1736,7 @@ table ._amount{
 }
 
 .bill .box-bill{
-    border: .2rem solid var(--main);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    padding: 1rem 2rem;
 }
 
@@ -1685,13 +1744,18 @@ table ._amount{
 .box-info h3,
 .box-bill h3{
    font-size: 2rem;
-   font-weight: 600;
+   font-weight: bolder;
    padding: 1rem 0;
-   border-bottom: .4rem solid #ececec;
+   text-transform: uppercase;
+   color: #555;
+   /* border-bottom: .2rem solid #ececec; */
 }
 .box-bill table{
     width: 100%;
-    border-bottom: .5rem solid #ececec;
+    border-bottom: .2rem solid #ececec;
+}
+.box-bill table tr:first-child{
+    border-bottom: .2rem solid #ececec;
 }
 
 .box-bill table th:last-child,
@@ -1702,7 +1766,8 @@ table ._amount{
 .box-bill table th,
 .box-bill table td{
     font-size: 1.5rem;
-    padding: .5rem 0;
+    padding: .8rem 0;
+   
 }
 
 .box-bill .checkout-payment{
@@ -1712,6 +1777,8 @@ table ._amount{
 
 .box-bill .checkout-payment label{
     font-size: 1.5rem;
+    color: #222;
+    padding: .5rem 0;
 }
 
 .box-bill .checkout-payment input{
@@ -2051,6 +2118,39 @@ body ._login {
     color: var(--main);
 }
 
+.login-container .login_orther{
+    width: 100%;
+    display: flex;
+   
+    gap: 2rem;
+    justify-content: center;
+}
+
+.login-container .login_orther a{
+    height: 5rem;
+    width: 5rem;
+    text-align: center;
+    line-height: 5rem;
+    font-size: 2rem;
+    border-radius: 50%;
+    font-size: 2.5rem;
+    color: #ffffff;
+  
+}
+
+.login-container .login_orther a:first-child{
+    background-color: #1877F2;
+    color: #ffffff;
+      margin-top: 0;
+}
+.login-container .login_orther a:last-child{
+    background-color: #EA4335;
+    color: #ffffff;
+      margin-top: 0;
+}
+body .login-container .login_orther a:hover{
+    color: #ffff;
+}
 
 /* ************ Profile Page CSS *************** */
 
