--- a/css/siteStyle/orderDetailStyle.css
+++ b/css/siteStyle/orderDetailStyle.css
@@ -15,6 +15,7 @@
       border: .1rem solid #ececec;
       resize: none;
       text-transform: none;
+      width: 100%;
   }
   
   .orderDetail-container form input:last-child{
